--- a/雪纳瑞不行版.html
+++ b/雪纳瑞不行版.html
@@ -7,6 +7,9 @@
             border: 1px solid #ccc;
         }
     </style>
+    </head>
+    <body>
+        <canvas id="canvas" width="400" height="400" ></canvas></body>
 	<script>
 	   window.onload=function(){
 		
@@ -18,7 +21,6 @@
 		
         CreateSector(ctx,w/2,h/2,150,30,90);
 		ctx.fillStyle("black");
-		ctx.fill();
     /*在中心位置画一个半径150px的圆弧右上角*/
   		
 	}			
@@ -26,16 +28,14 @@
     function  CreateSector(ctx,x,y,r,angle1,angle2)
 	{
     /*把起点放到圆心位置*/
-	ctx.beginPath();
     ctx.moveTo(x,y);
     ctx.arc(x,y,r,angle1*Math.PI/180,angle2*Math.PI/180,true);
-	ctx.closePath();
+    ctx.fill();
 	}
 	
 </script>
-</head>
-<body>
-   <canvas id="canvas" width="400" height="400" ></canvas>
 
-</body>
+
+
+
 <html>
